Added some demo functionalities

--- a/public/views/about_me.html
+++ b/public/views/about_me.html
@@ -1,4 +1,7 @@
-﻿<div class="col-md-5 col-md-offset-2" ng-controller="OtherCtrl">
-    <div>™™™™™™ OTHER CONTROLLER {{data}}</
+﻿<div ng-controller="AboutMeCtrl">
+
+    <div class="about-me">
+    			<h3>maja</h3>
+    </div>
         
 </div>
