--- a/public/views/common/header.html
+++ b/public/views/common/header.html
@@ -1,10 +1,34 @@
 ﻿
 <div class="row title-toolbar">
-	<div class="front-text">
-		<a class="home-link" href="#home"><span>MAJA LOKAR</span></a>    
+	<div class="banner-text">
+		<div class="text-items">
+			<div class="front-text">
+				<a class="home-link" href="#home"><span>ELVIS FAJKO</span></a>    
+			</div>
+			<p class="title-description-text">Uradna spletna stran</p>
+		</div>
+		<div class="svg-icons pull-right">
+        	<img ng-src="/img/facebook.svg">
+            <img ng-src="/img/youtube.svg">
+			<img ng-src="/img/email.svg">
+    	</div>
+
 	</div>
 
-	<p class="title-description-text"><i>Software developer, mountain hiker and programming enthusiast</i></p>
-</div>
+	
+
+	<div class="links">
+		<nav class="navbar navbar-inverse">
+		  <div class="container-fluid">
+		    <ul class="nav navbar-nav">
+		      <li><a class="home-link-panel" href="#home">DOMOV</a></li>
+		      <li><a class="home-link-panel" href="#about_me">O MENI<a/></li>
+		      <li><a class="home-link-panel" href="#concerts">KONCERTI</a></li>
+		      <li><a class="home-link-panel" href="#music">GLASBA</a></li>
+		      <li><a class="home-link-panel" href="#video">VIDEO</a></li>
+		    </ul>
+	  	  </div>
+		</nav>
+	</div>	s
 </div> 
     
